added more table data

--- a/index.html
+++ b/index.html
@@ -3,22 +3,142 @@
   <head>
     <title>Title of the document</title>
     <style>
-      .label {
-        background-color: #fff;
+      table {
+        width: 100%;
+        margin: 30px auto;
+        border-collapse: collapse;
+        background-color: aqua;
+      }
+
+      th,
+      td {
+        padding: 10px;
         border: 1px solid #666;
-        color: #000;
-        padding: 10px 15px;
-        text-align: center;
-        display: inline-block;
-        font-size: 20px;
-        margin: 15px;
-        cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <label class="label">
-      <input type="checkbox" name="checkbox" value="text">Text
-    </label>
+    <table>
+      <tr class="row1">
+        <th>*DISNEYLAND*</th>
+        <th>*BUSCH GARDENS*</th>
+        <th>*LEGOLAND*</th>
+      </tr>
+
+      <tr class="row2">
+        <td>March</td>
+        <td>10.09.2018</td>
+        <td> COL 3 </td>
+      </tr>
+
+      <tr class="row3">
+        <td>June</td>
+        <td>18.07.2018</td>
+        <td> COL 3 </td>
+      </tr>
+
+      <tr class="row4">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row5">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row6">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row7">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row8">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row9">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row10">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row11">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row12">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row13">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row14">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row15">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row16">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row17">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row18">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row19">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+      <tr class="row20">
+        <td> COL 1</td>
+        <td> COL 2</td>
+        <td> COL 3</td>
+      </tr>
+
+    </table>
   </body>
 </html>
