deleted css file

--- a/index.html
+++ b/index.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" src="main.css" />
     <title>Title of the document</title>
-    <style>
-      table {
-        width: 100%;
-        margin: 30px auto;
-        border-collapse: collapse;
-        background-color: aqua;
-      }
-
-      th,
-      td {
-        padding: 10px;
-        border: 1px solid #666;
-      }
-    </style>
   </head>
   <body>
     <table>
