--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" src="main.css" />
-    <title>Title of the document</title>
+    <link rel="stylesheet" src="/style/main.css" />
+    <title>Open Rooms</title>
   </head>
   <body>
     <table>
