--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" src="/style/main.css" />
     <title>Open Rooms</title>
   </head>
+
   <body>
-    <table>
+    <table class="datatable">
+
       <tr class="row1">
         <th>*DISNEYLAND*</th>
         <th>*BUSCH GARDENS*</th>
@@ -127,5 +129,6 @@
       </tr>
 
     </table>
+    
   </body>
 </html>
