--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" src="/style/main.css" />
+    <meta name="viewport" width="device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style/main.css" />
     <title>Open Rooms</title>
   </head>
 
@@ -129,6 +130,6 @@
       </tr>
 
     </table>
-    
+
   </body>
 </html>
