added test files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" width="device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
-    <title>Open Rooms</title>
+    <title>OPEN ROOMS</title>
   </head>
 
   <body>
