deleted test files and modified html

--- a/index.html
+++ b/index.html
@@ -16,117 +16,117 @@
       </tr>
 
       <tr class="row2">
-        <td>March</td>
-        <td>10.09.2018</td>
-        <td> COL 3 </td>
+        <td> Haunter Mansion </td>
+        <td> Gwazi </td>
+        <td> Coastersaurus </td>
       </tr>
 
       <tr class="row3">
-        <td>June</td>
-        <td>18.07.2018</td>
-        <td> COL 3 </td>
+        <td> Big Thunder </td>
+        <td> Montu </td>
+        <td> Coast Guard Academy </td>
       </tr>
 
       <tr class="row4">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> Space Mountian </td>
+        <td> Kumba </td>
+        <td> Flying School </td>
       </tr>
 
       <tr class="row5">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> Its a Small World </td>
+        <td> Scorpion </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row6">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> Falcon's Fury </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row7">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> SheiKra </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row8">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> Cheetah Hunt </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row9">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row10">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row11">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row12">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row13">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row14">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row15">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row16">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row17">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row18">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row19">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
       <tr class="row20">
-        <td> COL 1</td>
-        <td> COL 2</td>
-        <td> COL 3</td>
+        <td> COL 1 </td>
+        <td> COL 2 </td>
+        <td> COL 3 </td>
       </tr>
 
     </table>
