added test files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </tr>
 
       <tr class="row2">
-        <td> Haunter Mansion </td>
+        <td> Haunted Mansion </td>
         <td> Gwazi </td>
         <td> Coastersaurus </td>
       </tr>
