--- a/clock/clock.html
+++ b/clock/clock.html
@@ -19,6 +19,7 @@
         <span id="hour">00</span>:
         <span id="minutes">00</span>:
         <span id="seconds">00</span>
+        <span id="period">AM</span>
     </div>
 </div>
 
@@ -32,9 +33,27 @@
             hou = now.getHours(),
             min = now.getMinutes(),
             sec = now.getSeconds(),
+            pe = "AM";
+
+            if(hou == 0){
+                hou = 12;
+            }
+            if(hou > 12){
+                hou = hou - 12;
+                pe = "PM";
+            }
+
+            Number.prototype.pad = function(digits){
+                for(var n = this.toString(); n.length < digits; n = 0 + n);
+                return n;
+            }
 
             var months = ["January", "Febuary", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
             var week = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+            var id = ["dayneme", "month", "daynum", "year", "hour", "minutes", "seconds", "period"];
+            var values = [week[dname], months[mo], dnum.pad(2), yr, hou.pad(2), min.pad(2), sec.pad(2), pe];
+            for(var i = 0; i < ids.length; i++)
+            document.getElementById(ids[i]).firstChild.nodeValue = values[i];
 
     }
 
