deleted old test files and modified current

--- a/Testing/test.html
+++ b/Testing/test.html
@@ -4,29 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="test.css">
+    
+    <script src="/Testing/test2.js"></script>
 </head>
  
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <h1 id="message">
-                    Hii! GeeksforGeeks people
-                </h1>
-                <img id="myImage" src="/images/closed.jpg">
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-    </div>
-    <div class="button">
-        <button class="btn btn-warning" onclick=before();>
-            Before
-        </button>
-        <button class="btn btn-success" onclick=afterr();>
-            After
-        </button>
-    </div>
+    <img width="480px" src="/images/closed.jpg" 
+    class="logo" alt="Banner" onclick="ratesD(this)" />
 </body>
+    
+
 </html>
