--- a/index.html
+++ b/index.html
@@ -36,100 +36,103 @@
       <tr class="row5">
         <td> Its a Small World </td>
         <td> Scorpion </td>
-        <td> COL 3 </td>
+        <th> *KINGS DOMINION* </th>
       </tr>
 
       <tr class="row6">
-        <td> COL 1 </td>
+        <th> *UNIVERSAL STUDIOS* </th>
         <td> Falcon's Fury </td>
-        <td> COL 3 </td>
+        <td> Anaconda </td>
       </tr>
 
       <tr class="row7">
-        <td> COL 1 </td>
+        <td> VelociCoaster </td>
         <td> SheiKra </td>
-        <td> COL 3 </td>
+        <td> Delirium </td>
       </tr>
 
       <tr class="row8">
-        <td> COL 1 </td>
+        <td> Hogwarts Express </td>
         <td> Cheetah Hunt </td>
-        <td> COL 3 </td>
+        <td> Berserker </td>
       </tr>
 
       <tr class="row9">
-        <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> E.T. Adventure </td>
+        <th> *THE RAPIDS* </th>
+        <td> Dominator </td>
       </tr>
 
       <tr class="row10">
-        <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> Escape from Gringotts </td>
+        <td> Baby Blue </td>
+        <td> Grizzly </td>
       </tr>
 
       <tr class="row11">
-        <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> Revenge of the Mummy </td>
+        <td> 
+          Big Thunder </td>
+        <td> Intimidator 305 </td>
       </tr>
 
       <tr class="row12">
-        <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> COL 1 </td> 
+        <td> Black Thunder </td>
+        <td> Racer 75 </td>
       </tr>
 
       <tr class="row13">
-        <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> COL 1 </td> 
+        <td> Brain Drain </td>
+        <td> WindSeeker </td>
       </tr>
 
       <tr class="row14">
         <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> 
+          FlowRider </td>
+        <td> Tumbili </td>
       </tr>
 
       <tr class="row15">
         <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> 
+          Pirates Plunge </td>
+        <td> Reptilian </td>
       </tr>
 
       <tr class="row16">
         <td> COL 1 </td>
-        <td> COL 2 </td>
-        <td> COL 3 </td>
+        <td> Rapids Racer </td>
+        <td> Twisted Timbers </td>
       </tr>
 
       <tr class="row17">
         <td> COL 1 </td>
-        <td> COL 2 </td>
+        <td> Big Red </td>
         <td> COL 3 </td>
       </tr>
 
       <tr class="row18">
         <td> COL 1 </td>
-        <td> COL 2 </td>
+        <td> Body Blasters </td>
         <td> COL 3 </td>
       </tr>
 
       <tr class="row19">
         <td> COL 1 </td>
-        <td> COL 2 </td>
+        <td> Raging Rapids </td>
         <td> COL 3 </td>
       </tr>
 
       <tr class="row20">
         <td> COL 1 </td>
-        <td> COL 2 </td>
+        <td> Tubin Tornadoes </td>
         <td> COL 3 </td>
       </tr>
 
     </table>
-
+   <!-- -->
   </body>
 </html>
