--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" width="device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
+    <script src="/Testing/test2.js"></script>
     <title>OPEN ROOMS</title>
   </head>
 
@@ -15,10 +16,17 @@
         <th>*LEGOLAND*</th>
       </tr>
 
+      
       <tr class="row2">
-        <td> Haunted Mansion </td>
-        <td> Gwazi </td>
-        <td> Coastersaurus </td>
+        <td> <img width="55px" src="/images/closed.jpg" 
+          class="logo" alt="Banner" onclick="ratesD(this)" />
+          Haunted Mansion </td>
+        <td> <img width="60px" src="/images/closed.jpg" 
+          class="logo" alt="Banner" onclick="ratesD(this)" />
+          Gwazi </td>
+        <td> <img width="65px" src="/images/closed.jpg" 
+          class="logo" alt="Banner" onclick="ratesD(this)" />
+          Coastersaurus </td>
       </tr>
 
       <tr class="row3">
