--- a/openRooms.html
+++ b/openRooms.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/NEWOpenRooms/openRoomsStyle.css">
-    <script src="/NEWOpenRooms/script.js"></script>
+    <link rel="stylesheet" href="/openRoomsStyle.css">
+    <script src="/script.js"></script>
     <title>Document</title>
 </head>
 <body onload="initClock()">
     <section class="tables">
         <div class="column1">
             <table class="button-col1"> 
-                <tr><th>COL 1</th></tr>
+                <tr><th><img height="41px" src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></th></tr>
                 <tr><td>COL 1</td></tr>
                 <tr><td>COL 1</td></tr>
                 <tr><td>COL 1</td></tr>
