--- a/openRooms.html
+++ b/openRooms.html
@@ -11,36 +11,50 @@
     <section class="tables">
         <div class="column1">
             <table class="button-col1"> 
-                <tr><th><img height="41px" src="/images/closed.jpg" 
-                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></th></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
-                <tr><td>COL 1</td></tr>
+                <tr><td class="toHide"><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
             </table>
         </div>
         <div class="column2">
             <table class="rooms-col1">
-                <tr><th>COL 2</th></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
+                <tr><th>*DISNEYLAND*</th></tr>
+                <tr><td>Haunted Mansion</td></tr>
+                <tr><td>Big Thunder</td></tr>
+                <tr><td>Space Mountian</td></tr>
+                <tr><td>Its a Small World</td></tr>
+                <tr><th>*UNIVERSAL STUDIOS*</th></tr>
+                <tr><td>VelociCoaster</td></tr>
+                <tr><td>Hogwatys Express</td></tr>
+                <tr><td>Escape from Gringotts</td></tr>
+                <tr><td>Revenge of the Mummy</td></tr>
                 <tr><td>COL 2</td></tr>
                 <tr><td>COL 2</td></tr>
                 <tr><td>COL 2</td></tr>
@@ -50,78 +64,108 @@
         </div>
         <div class="column3">
             <table class="button-col2">
-                <tr><th>COL 3</th></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
-                <tr><td>COL 3</td></tr>
+                <tr><td class="toHide"><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img  src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
             </table>
         </div>
         <div class="column4">
             <table class="rooms-col2">
-                <tr><th>COL 4</th></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
-                <tr><td>COL 4</td></tr>
+                <tr><th>*BUSCH GARDENS*</th></tr>
+                <tr><td>Gwazi</td></tr>
+                <tr><td>Montu</td></tr>
+                <tr><td>Scorpion</td></tr>
+                <tr><td>Falcon's Fury</td></tr>
+                <tr><td>SheiKra</td></tr>
+                <tr><td>Cheetah Hunt</td></tr>
+                <tr><th>*THE RAPIDS*</th></tr>
+                <tr><td>Baby Blue</td></tr>
+                <tr><td>Big Thunder</td></tr>
+                <tr><td>Brain Drain</td></tr>
+                <tr><td>Flow Rider</td></tr>
+                <tr><td>Pirates Plunge</td></tr>
+                <tr><td>Rapids Racer</td></tr>
+                <tr><td>Big Red</td></tr>
             </table>
         </div>
         <div class="column5">
             <table class="button-col3">
-                <tr><th>COL 5</th></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
-                <tr><td>COL 5</td></tr>
+                <tr><td class="toHide"><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
+                <tr><td><img src="/images/closed.jpg" 
+                    class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
             </table>
         </div>
         <div class="column6">
             <table class="rooms-col3">
-                <tr><th>COL 6</th></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
-                <tr><td>COL 6</td></tr>
+                <tr><th>*LEGOLAND*</th></tr>
+                <tr><td>Coast Guard Academy</td></tr>
+                <tr><td>Flying School</td></tr>
+                <tr><td>Coastersaurus</td></tr>
+                <tr><th>*KINGS DOMINION*</th></tr>
+                <tr><td>Anaconda</td></tr>
+                <tr><td>Delirium</td></tr>
+                <tr><td>Berserker</td></tr>
+                <tr><td>Dominator</td></tr>
+                <tr><td>Grizzly</td></tr>
+                <tr><td>Intimidator 305</td></tr>
+                <tr><td>Racer 75</td></tr>
+                <tr><td>WindSeeker</td></tr>
+                <tr><td>Tumbili</td></tr>
+                <tr><td>Reptilian</td></tr>
             </table>
         </div>
     </section>
