--- a/openRooms.html
+++ b/openRooms.html
@@ -21,7 +21,7 @@
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
-                <tr><td><img  src="/images/closed.jpg" 
+                <tr><td class="toHide"><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img  src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
@@ -78,7 +78,7 @@
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
-                <tr><td><img src="/images/closed.jpg" 
+                <tr><td class="toHide"><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
@@ -125,7 +125,7 @@
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
-                <tr><td><img src="/images/closed.jpg" 
+                <tr><td class="toHide"><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
                 <tr><td><img src="/images/closed.jpg" 
                     class="logo" alt="Banner" onclick="ratesD(this)" /></td></tr>
