--- a/openRooms.html
+++ b/openRooms.html
@@ -59,11 +59,11 @@
                 <tr><td>Hogwatys Express</td></tr>
                 <tr><td>Escape from Gringotts</td></tr>
                 <tr><td>Revenge of the Mummy</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
-                <tr><td>COL 2</td></tr>
+                <tr><td>E.T. Adventure</td></tr>
+                <tr><td>The Simpsons Ride</td></tr>
+                <tr><td>Men in Black Alien Attack</td></tr>
+                <tr><td>Twirl 'n' Hurl</td></tr>
+                <tr><td>Rip Ride Rockit</td></tr>
             </table>
         </div>
         <div class="column3">
